--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,11 @@ collections:
 
 # Build settings
 markdown: kramdown
-gems: [bourbon, neat]
+gems: ['bourbon', 'neat', 'jekyll-crosspost-to-medium']
+
+jekyll-crosspost_to_medium:
+  enabled: true
+  cache: .jekyll-crosspost_to_medium
+  status: public
+  license: all-rights-reserved
+
