--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -1,3 +1,6 @@
 ---
 - "/writing/goals"
 - "/writing/new-site"
+- "/writing/year-in-review-2015"
+- "/writing/goals.html"
+- "/writing/year-in-review-2015.html"
