--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -2,3 +2,5 @@
 - "/writing/goals"
 - "/writing/new-site"
 - "/writing/year-in-review-2015"
+- "/writing/goals.html"
+- "/writing/year-in-review-2015.html"
