--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -1,6 +1,4 @@
 ---
-- "/writing/goals"
-- "/writing/new-site"
-- "/writing/year-in-review-2015"
+- "/writing/new-site.html"
 - "/writing/goals.html"
 - "/writing/year-in-review-2015.html"
