--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,9 @@ linkedin:  patrickbjohnson
 collections:
   work:
     output: true
-  goals: 
+  goals:
+    output: true
+  fire-meetup:
     output: true
 
 
