--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -4,3 +4,4 @@
 - "/writing/year-in-review-2015.html"
 - "/writing/working-together.html"
 - "/writing/year-in-review-2016.html"
+- "/writing/who-cares.html"
