--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -5,3 +5,4 @@
 - "/writing/working-together.html"
 - "/writing/year-in-review-2016.html"
 - "/writing/who-cares.html"
+- "/writing/what-is-burnout.html"
