--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -6,3 +6,4 @@
 - "/writing/year-in-review-2016.html"
 - "/writing/who-cares.html"
 - "/writing/what-is-burnout.html"
+- "/writing/year-in-review-2017.html"
