--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -7,3 +7,4 @@
 - "/writing/who-cares.html"
 - "/writing/what-is-burnout.html"
 - "/writing/year-in-review-2017.html"
+- "/writing/introducing-match-maker"
