fix url for matchMaker post

--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -8,3 +8,4 @@
 - "/writing/what-is-burnout.html"
 - "/writing/year-in-review-2017.html"
 - "/writing/introducing-match-maker"
+- "/writing/introducing-match-maker.html"
