--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -9,3 +9,4 @@
 - "/writing/year-in-review-2017.html"
 - "/writing/introducing-match-maker.html"
 - "/writing/reactive-shopify-ui.html"
+- "/writing/stick-to-the-script.html"
